--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DONATE BANGLADESH</title>
+    <title>Donate Bangladesh</title>
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
@@ -39,7 +39,7 @@
 
     <main class="mt-16 p-3">
         <div>
-          <h1 class="text-5xl">Important FAQ ?</h1>
+          <h1 class="text-5xl">Important FAQ's ?</h1>
         </div>
         <div class="collapse collapse-arrow mt-7 p-3 bg-base-200 border-2">
             <input type="radio" name="my-accordion-2" checked="checked" />
@@ -76,5 +76,8 @@
     <footer>
 
     </footer>
+
+    <script src="./js/index.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 </html>
