--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header id="navbar" class=" sticky top-0 z-50  container  mx-auto backdrop-blur-xl bg-white/30  ">
         <!-- navbar -->
-        <div class="navbar bg-amber-100  md:flex-row ">
+        <div class="navbar bg-zinc-400  md:flex-row ">
             <div class="navbar-start ">
-                <button id="blog-site" class="btn bg-green-300 font-extrabold">Blog</button>
+                <button id="blog-site" class="btn bg-teal-300 font-extrabold">Blog</button>
             </div>
             <div class="navbar-center lg:flex">
                 <img src="./assets/logo.png" alt="">
@@ -62,7 +62,7 @@
                 <div>
                     <input id="input-flood-Noakhali" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
                 </div>
-                <button id="btn-flood-Noakhali" class="btn  bg-green-300 font-bold mt-3 w-full " >Donate Now</button>
+                <button id="btn-flood-Noakhali" class="btn  bg-teal-300 font-bold mt-3 w-full " >Donate Now</button>
 
                 <dialog id="my_modal_1" class="modal  ">
                   <div class="modal-box justify-center ">
@@ -104,7 +104,7 @@
                 <div>
                     <input id="input-feni-donation" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
                 </div>
-                <button id="feni-donation-btn" class="btn bg-green-300 font-bold mt-3 w-full">Donate Now</button>
+                <button id="feni-donation-btn" class="btn bg-teal-300 font-bold mt-3 w-full">Donate Now</button>
               </div>
             </div>
           </div>
@@ -131,7 +131,7 @@
                 <div>
                     <input id="input-quota-movement" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
                 </div>
-                <button id="quota-movement-btn" class="btn bg-green-300 font-bold mt-3 w-full">Donate Now</button>
+                <button id="quota-movement-btn" class="btn bg-teal-300 font-bold mt-3 w-full">Donate Now</button>
               </div>
             </div>
           </div>
@@ -158,5 +158,9 @@
       <script src="./js/home.js"></script>
   
   
+
+      <footer>
+
+      </footer>
   </body>
   </html>
