--- a/blog.html
+++ b/blog.html
@@ -73,9 +73,13 @@
        </main>
 
 
-    <footer>
-
-    </footer>
+       <footer>
+        <div class=" divider divider-neutral pl-6 pr-6 mt-16 mb-10 pb-8">
+          <p class="font-extrabold text-xs" style="color: rgb(84, 55, 35);">
+            An MJ.Tanzim Development &copy; 2024
+          </p>
+      </div>
+      </footer>
 
     <script src="./js/index.js"></script>
     <script src="./js/home.js"></script>
