--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
   
 
       <footer>
-
+        <div class=" divider divider-neutral pl-24 pr-24 mt-16 mb-10 pb-8">
+          <p class="font-extrabold text-xs" style="color: rgb(84, 55, 35);">
+            An MJ.Tanzim Development &copy; 2024
+          </p>
+      </div>
       </footer>
   </body>
   </html>
